Se refactorizan los componentes del home y se crea un home module

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,27 +1,1 @@
-<!-- start banner Area -->
-<app-banner-area></app-banner-area>
-<!-- End banner Area -->
-
-<!-- Start home-about Area -->
-<app-home-about></app-home-about>
-<!-- End home-about Area -->
-
-<!-- Start item-category Area -->
-<app-home-services></app-home-services>
-<!-- End item-category Area -->
-
-<!-- Start about-video Area -->
-<app-home-video></app-home-video>
-<!-- End about-video Area -->
-
-<!-- Start review Area -->
-<app-home-review></app-home-review>
-<!-- End review Area -->
-
-<!-- Start blog Area -->
-<app-home-blog></app-home-blog>
-<!-- end blog Area -->
-
-<!-- start footer Area -->
-<app-home-footer></app-home-footer>
-<!-- End footer Area -->
+<router-outlet></router-outlet>
