Se finaliza la integración de las otras vistas del menú

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -7,7 +7,7 @@
         <h1 class="text-white">
           Contact Us
         </h1>
-        <p class="text-white link-nav"><a href="index.html">Home </a> <span class="lnr lnr-arrow-right"></span> <a href="contact.html">
+        <p class="text-white link-nav"><a href="home">Home </a> <span class="lnr lnr-arrow-right"></span> <a href="contact">
             Contact Us</a></p>
       </div>
     </div>
@@ -26,9 +26,9 @@
             <span class="lnr lnr-home"></span>
           </div>
           <div class="contact-details">
-            <h5>Binghamton, New York</h5>
+            <h5>Cali, Colombia</h5>
             <p>
-              4343 Hinkle Deegan Lake Road
+              Calle 38 # 42 - 24
             </p>
           </div>
         </div>
