--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -26,9 +26,9 @@
             <span class="lnr lnr-home"></span>
           </div>
           <div class="contact-details">
-            <h5>Cali, Colombia</h5>
+            <h5>{{contactInfo.country}}</h5>
             <p>
-              Calle 38 # 42 - 24
+              {{contactInfo.address}}
             </p>
           </div>
         </div>
@@ -37,8 +37,8 @@
             <span class="lnr lnr-phone-handset"></span>
           </div>
           <div class="contact-details">
-            <h5>00 (958) 9865 562</h5>
-            <p>Mon to Fri 9am to 6 pm</p>
+            <h5>{{contactInfo.telephone}}</h5>
+            <p>{{contactInfo.business_hours}}</p>
           </div>
         </div>
         <div class="single-contact-address d-flex flex-row">
@@ -46,8 +46,8 @@
             <span class="lnr lnr-envelope"></span>
           </div>
           <div class="contact-details">
-            <h5>support@colorlib.com</h5>
-            <p>Send us your query anytime!</p>
+            <h5>{{contactInfo.email}}</h5>
+            <p>{{contactInfo.short_text}}</p>
           </div>
         </div>
       </div>
