Se agrega descripción al servicio

--- a/src/app/catalog-services/catalog-services.component.html
+++ b/src/app/catalog-services/catalog-services.component.html
@@ -40,8 +40,7 @@
               <h4>{{service.name}}</h4>
             </a>
             <p>
-              Usage of the Internet is becoming more common due to rapid advance. Usage of the Internet is becoming
-              more common due to rapid advance.
+              {{service.description}}
             </p>
           </div>
           <div class="col-lg-3 flex-row d-flex price-size">
