Se actualizan textos

--- a/src/app/home/home-services/home-services.component.html
+++ b/src/app/home/home-services/home-services.component.html
@@ -23,7 +23,7 @@
           </p>
         </div>
       </div>
-      <a class="primary-btn mx-auto mt-80" href="#">Ver catálogo completo</a>
+      <a class="primary-btn mx-auto mt-80" href="catalog">Ver catálogo completo</a>
     </div>
   </div>
 </section>
