--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -20,222 +20,47 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-9">
-        <h6 class="text-uppercase">Brand new app to blow your mind</h6>
+        <h6 class="text-uppercase">Alexandra Gómez</h6>
         <h1>
-          We’ve baked every item
-          from the core of our heart to serve you
+          Hemos puesto a tu disposición nuestros mejores servicios
+          para que los disfrutes
         </h1>
         <p>
-          <span>We are here to listen from you deliver exellence by any means</span>
+          <span> </span>
         </p>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-          dolore magna aliqua. Ut enim ad minim. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-          eiusmod temp or incididunt ut labore et dolore magna aliqua. Ut enim ad minim. Lorem ipsum dolor sit amet,
-          consectetur adipisicing elit, sed do eiusmod temp or incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim.
+            Es un placer presentarles nuestro portafolio de servicios fruto de años de experiencia, en los que buscamos siempre llegar a ustedes con el mejor de los servicios, en todo lo relacionado con tratamientos de estética facial, corporal y de Spa con las mejores técnicas y aparatología.
         </p>
-        <a class="primary-btn squire mx-auto mt-20" href="#">Get Started Now</a>
+        <p>
+            Contamos con estrictas normas de calidad y seguridad en todos nuestros tratamientos faciales y corporales, siendo nuestra prioridad conseguir la completa satisfacción de nuestros pacientes en un ambiente agradable y confortable en nuestra cabina ubicada estratégicamente en la ciudad para brindar un oportuno servicio. 
+        </p>
       </div>
     </div>
   </div>
-  <img class="about-img" src="img/about-img.png" alt="">
+  <img class="about-img" src="assets/img/t4.jpg" alt="">
 </section>
 <!-- End home-about Area -->
-
-<!-- Start review Area -->
-<section class="review-area section-gap relative">
-  <div class="overlay overlay-bg"></div>
-  <div class="container">
-    <div class="row d-flex justify-content-center">
-      <div class="col-md-9 pb-40 header-text text-center">
-        <h1 class="pb-10 text-white">Enjoy our Client’s Review</h1>
-        <p>
-          Who are in extremely love with eco friendly system.
-        </p>
-      </div>
-    </div>
-    <div class="row">
-      <div class="active-review-carusel">
-        <div class="single-review item">
-          <img src="img/r1.png" alt="">
-          <div class="title justify-content-start d-flex">
-            <a href="#">
-              <h4>Fannie Rowe</h4>
-            </a>
-            <div class="star">
-              <span class="fa fa-star checked"></span>
-              <span class="fa fa-star checked"></span>
-              <span class="fa fa-star checked"></span>
-              <span class="fa fa-star"></span>
-              <span class="fa fa-star"></span>
-            </div>
-          </div>
-          <p>
-            Accessories Here you can find the best computer accessory for your laptop, monitor, printer, scanner,
-            speaker. Here you can find the best computer accessory for your laptop, monitor, printer, scanner, speaker.
-          </p>
-        </div>
-        <div class="single-review item">
-          <img src="img/r1.png" alt="">
-          <div class="title justify-content-start d-flex">
-            <a href="#">
-              <h4>Hulda Sutton</h4>
-            </a>
-            <div class="star">
-              <span class="fa fa-star checked"></span>
-              <span class="fa fa-star checked"></span>
-              <span class="fa fa-star checked"></span>
-              <span class="fa fa-star"></span>
-              <span class="fa fa-star"></span>
-            </div>
-          </div>
-          <p>
-            Accessories Here you can find the best computer accessory for your laptop, monitor, printer, scanner,
-            speaker. Here you can find the best computer accessory for your laptop, monitor, printer, scanner, speaker.
-          </p>
-        </div>
-        <div class="single-review item">
-          <img src="img/r1.png" alt="">
-          <div class="title justify-content-start d-flex">
-            <a href="#">
-              <h4>Fannie Rowe</h4>
-            </a>
-            <div class="star">
-              <span class="fa fa-star checked"></span>
-              <span class="fa fa-star checked"></span>
-              <span class="fa fa-star checked"></span>
-              <span class="fa fa-star"></span>
-              <span class="fa fa-star"></span>
-            </div>
-          </div>
-          <p>
-            Accessories Here you can find the best computer accessory for your laptop, monitor, printer, scanner,
-            speaker. Here you can find the best computer accessory for your laptop, monitor, printer, scanner, speaker.
-          </p>
-        </div>
-        <div class="single-review item">
-          <img src="img/r1.png" alt="">
-          <div class="title justify-content-start d-flex">
-            <a href="#">
-              <h4>Hulda Sutton</h4>
-            </a>
-            <div class="star">
-              <span class="fa fa-star checked"></span>
-              <span class="fa fa-star checked"></span>
-              <span class="fa fa-star checked"></span>
-              <span class="fa fa-star"></span>
-              <span class="fa fa-star"></span>
-            </div>
-          </div>
-          <p>
-            Accessories Here you can find the best computer accessory for your laptop, monitor, printer, scanner,
-            speaker. Here you can find the best computer accessory for your laptop, monitor, printer, scanner, speaker.
-          </p>
-        </div>
-        <div class="single-review item">
-          <img src="img/r1.png" alt="">
-          <div class="title justify-content-start d-flex">
-            <a href="#">
-              <h4>Fannie Rowe</h4>
-            </a>
-            <div class="star">
-              <span class="fa fa-star checked"></span>
-              <span class="fa fa-star checked"></span>
-              <span class="fa fa-star checked"></span>
-              <span class="fa fa-star"></span>
-              <span class="fa fa-star"></span>
-            </div>
-          </div>
-          <p>
-            Accessories Here you can find the best computer accessory for your laptop, monitor, printer, scanner,
-            speaker. Here you can find the best computer accessory for your laptop, monitor, printer, scanner, speaker.
-          </p>
-        </div>
-        <div class="single-review item">
-          <img src="img/r1.png" alt="">
-          <div class="title justify-content-start d-flex">
-            <a href="#">
-              <h4>Hulda Sutton</h4>
-            </a>
-            <div class="star">
-              <span class="fa fa-star checked"></span>
-              <span class="fa fa-star checked"></span>
-              <span class="fa fa-star checked"></span>
-              <span class="fa fa-star"></span>
-              <span class="fa fa-star"></span>
-            </div>
-          </div>
-          <p>
-            Accessories Here you can find the best computer accessory for your laptop, monitor, printer, scanner,
-            speaker. Here you can find the best computer accessory for your laptop, monitor, printer, scanner, speaker.
-          </p>
-        </div>
-        <div class="single-review item">
-          <img src="img/r1.png" alt="">
-          <div class="title justify-content-start d-flex">
-            <a href="#">
-              <h4>Fannie Rowe</h4>
-            </a>
-            <div class="star">
-              <span class="fa fa-star checked"></span>
-              <span class="fa fa-star checked"></span>
-              <span class="fa fa-star checked"></span>
-              <span class="fa fa-star"></span>
-              <span class="fa fa-star"></span>
-            </div>
-          </div>
-          <p>
-            Accessories Here you can find the best computer accessory for your laptop, monitor, printer, scanner,
-            speaker. Here you can find the best computer accessory for your laptop, monitor, printer, scanner, speaker.
-          </p>
-        </div>
-        <div class="single-review item">
-          <img src="img/r1.png" alt="">
-          <div class="title justify-content-start d-flex">
-            <a href="#">
-              <h4>Hulda Sutton</h4>
-            </a>
-            <div class="star">
-              <span class="fa fa-star checked"></span>
-              <span class="fa fa-star checked"></span>
-              <span class="fa fa-star checked"></span>
-              <span class="fa fa-star"></span>
-              <span class="fa fa-star"></span>
-            </div>
-          </div>
-          <p>
-            Accessories Here you can find the best computer accessory for your laptop, monitor, printer, scanner,
-            speaker. Here you can find the best computer accessory for your laptop, monitor, printer, scanner, speaker.
-          </p>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<!-- End review Area -->
 
 <!-- Start about-video Area -->
 <section class="about-video-area section-gap">
   <div class="container">
     <div class="row align-items-center">
       <div class="col-lg-6 about-video-left">
-        <h6 class="text-uppercase">Brand new app to blow your mind</h6>
         <h1>
-          We’ve made a life <br>
-          that will change you
+          Ellos han confiado <br>
+          en nosotros
         </h1>
         <p>
-          <span>We are here to listen from you deliver exellence</span>
+          <span>Escucha sus opiniones</span>
         </p>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed doeiusmo d tempor incididunt ut labore et
-          dolore magna aliqua.
+          Te invitamos a que veas este corto video donde nuestros clientes expresan su agradecimiento
+          y muestran su satisfacción con el tratamiento recibido.
         </p>
-        <a class="primary-btn" href="#">Get Started Now</a>
+        <a class="primary-btn" href="contact">Contáctanos</a>
       </div>
       <div class="col-lg-6 about-video-right justify-content-center align-items-center d-flex">
-        <a class="play-btn" href="https://www.youtube.com/watch?v=ARA0AxrnHdM"><img class="img-fluid mx-auto" src="img/play.png"
+        <a class="play-btn" href="https://www.youtube.com/watch?v=ARA0AxrnHdM"><img class="img-fluid mx-auto" src="assets/img/play.png"
             alt=""></a>
       </div>
     </div>
