--- a/src/app/catalog-services/catalog-services.component.html
+++ b/src/app/catalog-services/catalog-services.component.html
@@ -78,7 +78,7 @@
         <a class="primary-btn" href="#">Get Started Now</a>
       </div>
       <div class="col-lg-6 about-video-right justify-content-center align-items-center d-flex">
-        <a class="play-btn" href="https://www.youtube.com/watch?v=ARA0AxrnHdM"><img class="img-fluid mx-auto" src="img/play.png"
+        <a class="play-btn" href="https://www.youtube.com/watch?v=ARA0AxrnHdM"><img class="img-fluid mx-auto" src="assets/img/play.png"
             alt=""></a>
       </div>
     </div>
